chore: complete local QA, add layout and tests

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,2 @@
-# WhatsApp relay env example
-
-# Provider: 'twilio' (default) or 'meta'
-WHATSAPP_PROVIDER=twilio
-
-# Twilio (if using twilio)
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-# Twilio WhatsApp "From" (must be a Twilio-approved WhatsApp sender), e.g. whatsapp:+1415XXXXXXX
-TWILIO_WHATSAPP_FROM=whatsapp:+1415XXXXXXX
-
-# Meta / WhatsApp Cloud (if using meta provider)
-# WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
-# WHATSAPP_TOKEN=your_facebook_graph_token
-
-# The target WhatsApp number that receives messages (your business number)
-# For Twilio we accept "whatsapp:+<E.164>" or "+<E.164>" — server formats appropriately.
-WHATSAPP_TARGET_NUMBER=+919844007900
-
-# Relay server port (default 5001)
-PORT=5001
+﻿VITE_BASE_URL=/
+VITE_API_URL=http://localhost:4000
