--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
                     "build":  "vite build",
                     "lint":  "eslint . --ext .js,.jsx,.ts,.tsx",
                     "preview":  "vite preview",
-                    "test":  "jest --config=jest.config.cjs"
+                    "test":  "jest"
                 },
     "dependencies":  {
                          "axios":  "^1.13.2",
